# CApexDumpWasm

./: .gitignore
DumpWasm/: CMakeLists.txt  CMakePresets.json  offsets.ini
DumpWasm/CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp
DumpWasm/CMakeProject1/dump/: Convar.h  Misc.h  buttons.h  dataMap.h  dataTable.h
WASMLoader/src/components/: loadWasm.vue
WASMLoader/src/wasm/: DumpWasm  DumpWasm.js  DumpWasm.wasm
